# x-1000

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTRUCTIONS.md  README.md  xpad_config.json
.github/workflows/: windows-main.yml
src/: main.cpp
src/app/: App.cpp  App.hpp
src/audio/: AudioEngine.cpp  AudioEngine.hpp  AudioScheduler.cpp  AudioScheduler.hpp  AudioTypes.hpp  TimeStretch.cpp  TimeStretch.hpp
src/config/: Config.cpp  Config.hpp
src/core/: Logger.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp
src/link/: LinkManager.cpp  LinkManager.hpp  LinkTypes.hpp
src/midi/: MidiManager.cpp  MidiManager.hpp
src/samples/: Sample.hpp  SampleBank.hpp  SampleLoader.cpp  SampleLoader.hpp
tests/: LinkManagerTests.cpp
